--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -54,7 +54,7 @@ jobs:
         uses: google-github-actions/setup-gcloud@v0.6.0
         with:
           service_account_email: github-actions@gaimin2020.iam.gserviceaccount.com
-          credentials_json: ${{ secrets.KEY }}
+          credentials_json: '${{ secrets.KEY }}'
           project_id: gaimin2020
           export_default_credentials: true
 
