--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           node-version: '16'
       - name: Install npm dependencies 
-        run: npm install
+        run: npm install --force
 
       - name: Update version in package.json
         run: |
